<resources>
    <string name="app_name">Sunshine</string>

    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="fog">Fog</string>
    <string name="light_clouds">Light Clouds</string>
    <string name="light_rain">Light Rain</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="storm">Storm</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="settings">Settings</string>
    <string name="unit">"Unit</string>

    <string name="today">Today, %1$s</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="dismiss">Dismiss</string>
    <string name="degrees">%1$s°</string>
    <string name="degree_celcius">%1$s°C</string>
    <string name="degree_farenheit">%1$s°F</string>
    <string name="degree_na">%1$s°</string>

    <!-- Date Format -->
    <string name="date_format_month_date">MMM dd</string>
    <string name="date_format_day">EEEE</string>

    <!-- Error -->
    <string name="error_city_not_found">City not found.</string>
    <string name="error_api_key_not_found">Please check you API key.</string>
    <string name="error_no_internet_connection">Please check your \n internet connection</string>
    <string name="error_snackbar_no_internet_connection">Please check your internet connection</string>

    <!-- Preferences Key - See [Preferences] -->
        <!-- City -->
        <string name="pref_title_city">City</string>
        <string name="pref_dialog_title_city">Please enter the City</string>
        <string name="pref_key_city">city</string>
        <string name="pref_default_city">Melbourne</string>

        <!-- Unit -->
        <string name="pref_title_unit">Unit</string>
        <string name="pref_dialog_title_unit">Please select a unit</string>
        <string name="pref_key_unit">unit</string>
        <string name="pref_default_unit">metric</string>
        <string name="pref_entry_unit_imperial">Fahrenheit</string>
        <string name="pref_entry_unit_metric">Celcius</string>
        <string name="pref_entry_unit_imperial_value">imperial</string>
        <string name="pref_entry_unit_metric_value">metric</string>

</resources>
